[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Diretor.gd" type="Script" id=1]
[ext_resource path="res://Assets/PNG/Hitman 1/hitman1_hold.png" type="Texture" id=2]
[ext_resource path="res://Assets/PNG/Hitman 1/White_Circle.svg.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 226.055

[sub_resource type="CircleShape2D" id=3]
radius = 40.1123

[node name="Diretor" type="KinematicBody2D"]
script = ExtResource( 1 )
speed = 150

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 3 )
texture_scale = 0.22
color = Color( 1, 1, 1, 0.15 )
shadow_enabled = true
shadow_filter = 2
shadow_item_cull_mask = 512

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
light_mask = 513
collision_mask = 513

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Area2D-Alunos" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D-Alunos"]
shape = SubResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Area2D-Alunos" to="." method="_on_Area2DAlunos_body_entered"]
